fix hero content alignment

--- a/src/scss/_overall.scss
+++ b/src/scss/_overall.scss
@@ -33,6 +33,7 @@
 .flex-wrap     { flex-wrap: wrap; }
 .items-center  { align-items: center; }
 .flex-start    { justify-content: flex-start; }
+.flex-center   { justify-content: center; }
 .space-between { justify-content: space-between; }
 
 .relative { position: relative; }
